add gem pry-rails

--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: @user, url: donations_path, local: true) do |form| %>
-  <%= render "error_messages", model: @user %>
+<%= form_with(url: donations_path, local: true) do |form| %>
+  <%#= render "error_messages", model: @user %>
   <h1>ユーザー名を入力</h1>
   <div class="field">
     <%= form.label :name, "名前（全角）" %>
